# cc-compression-tool-cpp

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: utf8.h
src/: compress.hpp  decompress.hpp  exit_codes.hpp  main.cpp  progress.hpp
src/argument/: argument.hpp  arguments.cpp
src/exceptions/: argument_exception.hpp  base_exception.hpp  exceptions.cpp  file_operation_exception.hpp
src/file_handler/: compressed_format.cpp  compressed_format.hpp  input_file.cpp  input_file.hpp  output_file.cpp  output_file.hpp
src/frequency_table/: frequency_table.cpp  frequency_table.hpp
src/prefix_codes/: prefix_codes.cpp  prefix_codes.hpp
test/: arguments_test.cpp  decode_and_write_test.cpp  decompress_test.cpp  file_handler_test.cpp  frequency_table_test.cpp  hello_test.cpp  output_file_test.cpp  prefix_codes_test.cpp  read_header_test.cpp  roundtrip_encode_decode.cmake
